--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "js-priority-queue": "^0.1.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.18"
